# CodeClan-LMS

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
.cargo/: config.toml
docs/: design-decisions.md  design-philosophy.md
docs/mockups/: 01_teacher_home.html  02_login.html  03_class_detail_lessons.html  04_lesson_detail.html  05_problem_solve.html  06_session_run.html  07_problem_bank.html  08_assessment_manage.html  09_student_manage.html  (+22 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_core.sql  001_initial.sql  002_classes.sql  003_lessons.sql  004_problems.sql  005_assessments.sql  006_sessions.sql  007_submissions.sql  008_attendance.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/judge/: mod.rs
src-tauri/src/server/: mod.rs  state.rs
src-tauri/src/server/routes/: admin.rs  assessments.rs  attendance.rs  audit.rs  auth.rs  classes.rs  dashboard.rs  divisions.rs  lessons.rs  mod.rs  problems.rs  sessions.rs  setup.rs  student.rs  students.rs  submissions.rs  teachers.rs
src-tauri/tests/: admin_test.rs  app_config_test.rs  auth_student_test.rs  auth_teacher_test.rs  classes_test.rs  problems_test.rs  students_test.rs  test_access_control.rs  test_assessments.rs  test_attendance.rs  test_audit.rs  test_auth.rs  test_divisions.rs  test_init.rs  test_lessons.rs  test_problems.rs  test_sessions.rs  test_student.rs  test_submissions.rs  test_teachers.rs  test_validation.rs
src-tauri/tests/common/: mod.rs
(+80 files in other folders)
